--- a/source/_posts/毕业北漂前端菜鸟的2021年终总结.md
+++ b/source/_posts/毕业北漂前端菜鸟的2021年终总结.md
@@ -1,7 +1,7 @@
 ---
 title: 毕业北漂前端菜鸟的2021年终总结
 date: 2022.1.9 21:43:51
-cover: https://s2.loli.net/2022/04/12/I34q7dcmADfQSFw.png
+cover: /static/articles/2021.webp
 categories:
   - JavaScript
 tags:
@@ -17,7 +17,7 @@ tags:
 
 <div class='article-cover'>
 
-![毕业北漂前端菜鸟的2021年终总结](/articles/2021.webp)
+![毕业北漂前端菜鸟的2021年终总结](/static/articles/2021.webp)
 
 </div>
 
